Added underground nest for spawning fleshbeast in blood lake sub map Lake Terminal destroy the lake sub map after full study Added keyed lines for Lake Added auto replace studier name with [REDACTED], when pawn missing Pause the Lake raid timer, while pawns inside sub map Stopping Lake raid summon after sub map destroyed Comp_CanDestroyedAfterStudy inspection string now prop Prevent Lake Terminal spawn on negative pos Lake and Puddle show current density

--- a/Languages/Russian/DefInjected/ThingDefs/Buildings_Anomalies.xml
+++ b/Languages/Russian/DefInjected/ThingDefs/Buildings_Anomalies.xml
@@ -130,5 +130,6 @@
 	<AE_BeamTarget.comps.Comp_CanDestroyedAfterStudy.activatingStringPending>модифицировать данные для {0}</AE_BeamTarget.comps.Comp_CanDestroyedAfterStudy.activatingStringPending>
 	<AE_BeamTarget.comps.Comp_CanDestroyedAfterStudy.guiLabelString>Выберите кто извлечёт это из комплекса</AE_BeamTarget.comps.Comp_CanDestroyedAfterStudy.guiLabelString>
 	<AE_BeamTarget.comps.Comp_CanDestroyedAfterStudy.jobString>модифицировать данные</AE_BeamTarget.comps.Comp_CanDestroyedAfterStudy.jobString>
+	<AE_BeamTarget.comps.Comp_CanDestroyedAfterStudy.interactionProgressString>Создание данных спутника</AE_BeamTarget.comps.Comp_CanDestroyedAfterStudy.interactionProgressString>
 	
 </LanguageData>
