Added unsaved research TL

--- a/Languages/Russian/DefInjected/ResearchProjectDef/ResearchProjects.xml
+++ b/Languages/Russian/DefInjected/ResearchProjectDef/ResearchProjects.xml
@@ -51,12 +51,12 @@
 	<AEBingingFoodSerum.generalRules.rulesStrings.2>subject_story->урчание живота было слышно на несколько километров вокруг</AEBingingFoodSerum.generalRules.rulesStrings.2>
 	<AEBingingFoodSerum.generalRules.rulesStrings.3>subject_gerund->синтезируется сыворотка обжорства</AEBingingFoodSerum.generalRules.rulesStrings.3>
 	
-	<AEBingingFoodSerum.label>сыворотка подавления голода</AEBingingFoodSerum.label>
-	<AEBingingFoodSerum.description>Синтезировать сыворотку, которая влияет на метаболизм человека для увеличения эффективности расщепления питательных веществ.</AEBingingFoodSerum.description>
-	<AEBingingFoodSerum.generalRules.rulesStrings.0>subject->сыворотка подавления голода</AEBingingFoodSerum.generalRules.rulesStrings.0>
-	<AEBingingFoodSerum.generalRules.rulesStrings.1>subject_story->выжил на одном сухпайке месяц</AEBingingFoodSerum.generalRules.rulesStrings.1>
-	<AEBingingFoodSerum.generalRules.rulesStrings.2>subject_story->не смог побороть заражение из-за нехватки питательных веществ для имунной системы</AEBingingFoodSerum.generalRules.rulesStrings.2>
-	<AEBingingFoodSerum.generalRules.rulesStrings.3>subject_gerund->синтезируется сыворотка подавления голода</AEBingingFoodSerum.generalRules.rulesStrings.3>
+	<AEHungerSuppressorSerum.label>сыворотка подавления голода</AEHungerSuppressorSerum.label>
+	<AEHungerSuppressorSerum.description>Синтезировать сыворотку, которая влияет на метаболизм человека для увеличения эффективности расщепления питательных веществ.</AEHungerSuppressorSerum.description>
+	<AEHungerSuppressorSerum.generalRules.rulesStrings.0>subject->сыворотка подавления голода</AEHungerSuppressorSerum.generalRules.rulesStrings.0>
+	<AEHungerSuppressorSerum.generalRules.rulesStrings.1>subject_story->выжил на одном сухпайке месяц</AEHungerSuppressorSerum.generalRules.rulesStrings.1>
+	<AEHungerSuppressorSerum.generalRules.rulesStrings.2>subject_story->не смог побороть заражение из-за нехватки питательных веществ для имунной системы</AEHungerSuppressorSerum.generalRules.rulesStrings.2>
+	<AEHungerSuppressorSerum.generalRules.rulesStrings.3>subject_gerund->синтезируется сыворотка подавления голода</AEHungerSuppressorSerum.generalRules.rulesStrings.3>
 	
 	
 	
