Added more few inspection string for Blood Pump Blood Pump properly reset time till next extraction Blood Liquid texture added and changed stack count

--- a/Languages/English/Keyed/BloodPump.xml
+++ b/Languages/English/Keyed/BloodPump.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
-	<AnomaliesExpected.BloodPump.Available>Connected blood liquid pumps: {0}/{1}</AnomaliesExpected.BloodPump.Available>
-	<AnomaliesExpected.BloodPump.Connected>Connected to any blood-like liquid source</AnomaliesExpected.BloodPump.Connected>
+	<AnomaliesExpected.BloodPump.Available>Connected blood-like liquid pumps: {0}/{1}</AnomaliesExpected.BloodPump.Available>
+	<AnomaliesExpected.BloodPump.CanExtractAmount>Each pump can extract {0} blood-like liquid</AnomaliesExpected.BloodPump.CanExtractAmount>
+	<AnomaliesExpected.BloodPump.Connected>Connected to blood-like liquid source: {0}</AnomaliesExpected.BloodPump.Connected>
 	<AnomaliesExpected.BloodPump.NotConnected>Not connected to any blood-like liquid source</AnomaliesExpected.BloodPump.NotConnected>
+	<AnomaliesExpected.BloodPump.TimeTillSpawn>Time till next extraction: {0}</AnomaliesExpected.BloodPump.TimeTillSpawn>
 	<AnomaliesExpected.BloodPump.Disconnected>Pump was disconnected from blood-like liquid source</AnomaliesExpected.BloodPump.Disconnected>
 </LanguageData>
