Blood Liquid concentration spawn trispike on extreme Bioferrite per Blood Liquid increased All serums market value rebalanced and some only sellable now No longer need to pick target when self inject Blood Liquid Lake research now Advanced Bioferrite and Injector from Blood Liquid requirments swap

--- a/Languages/English/Keyed/Misc.xml
+++ b/Languages/English/Keyed/Misc.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 	<AnomaliesExpected.Misc.Redacted>[REDACTED]</AnomaliesExpected.Misc.Redacted>
+	
+	<AnomaliesExpected.Misc.FleshbeastEmergeOnStage.Message>The fleshmass has detached from {0} and transformed into a fleshbeast!</AnomaliesExpected.Misc.FleshbeastEmergeOnStage.Message>
 </LanguageData>
