--- a/Languages/Russian/DefInjected/ThingDefs/Items_Resource_Manufactured.xml
+++ b/Languages/Russian/DefInjected/ThingDefs/Items_Resource_Manufactured.xml
@@ -30,5 +30,21 @@
 	<AEHungerSuppressorSerum.comps.CompUsable.useLabel>Использовать {0_label}</AEHungerSuppressorSerum.comps.CompUsable.useLabel>
 	<AEHungerSuppressorSerum.ingestible.ingestCommandString>Поглотить {0}</AEHungerSuppressorSerum.ingestible.ingestCommandString>
 	<AEHungerSuppressorSerum.ingestible.ingestReportString>Поглощает {0}</AEHungerSuppressorSerum.ingestible.ingestReportString>
+	
+	
+	
+	<Mote_AEBloodLiquidInjector.label>Mote</Mote_AEBloodLiquidInjector.label>
+	<AE_BloodLiquidInjector.label>инъектор кровиподобной жидкости</AE_BloodLiquidInjector.label>
+	<AE_BloodLiquidInjector.description>Одноразовая доза концентрированной кровиподобной жидкости. При введении, жидкость трансформируется, заменяя часть потерянной крови и увеличивая ее плотность вокруг серьезных ран, чтобы предотвратить дальнейшую кровопотерю. Она приоритезирует 5 самых тяжелых травм, фокусируясь на тех, где кровотечение наиболее сильное. Точная дозировка критически важна для предотвращения избыточного уровня концентрации жидкости в кровотоке.</AE_BloodLiquidInjector.description>
+	<AE_BloodLiquidInjector.comps.CompApplyUsableTo.useLabel>Ввести себе</AE_BloodLiquidInjector.comps.CompApplyUsableTo.useLabel>
+	<AE_BloodLiquidInjector.comps.CompApplyUsableTo.useToLabel>Ввести кому-то</AE_BloodLiquidInjector.comps.CompApplyUsableTo.useToLabel>
+	<AE_BloodLiquidInjector.ingestible.ingestCommandString>Ввести себе {0}</AE_BloodLiquidInjector.ingestible.ingestCommandString>
+	<AE_BloodLiquidInjector.ingestible.ingestReportString>Вводит {0}.</AE_BloodLiquidInjector.ingestible.ingestReportString>
+
+	<AE_FleshmassCyst.label>киста из биомассы</AE_FleshmassCyst.label>
+	<AE_FleshmassCyst.description>Паразитический, пульсирующий небольшой кусок плоти, способный к быстрому росту и трансформации. Способен внедряться в тело хозяина и питаться его энергией.</AE_FleshmassCyst.description>
+
+	<AE_FleshmassTumor.label>опухоль из биомассы</AE_FleshmassTumor.label>
+	<AE_FleshmassTumor.description>Живая, пульсирующая масса плоти со собственной волей, способная к быстрому росту и трансформации. Способна внедряться в тело хозяина и питаться его энергией.</AE_FleshmassTumor.description>
 
 </LanguageData>
