ThingCategoryDefs put in same place and translated TL

--- a/Languages/Russian/DefInjected/ThingCategoryDef/ThingCategories.xml
+++ b/Languages/Russian/DefInjected/ThingCategoryDef/ThingCategories.xml
@@ -2,5 +2,7 @@
 <LanguageData>
 
 	<BodyPartsAnomalyAE.label>аномалии</BodyPartsAnomalyAE.label>
+	<ItemsAnomalies.label>аномалии</ItemsAnomalies.label>
+	<AnomalyStudyNotes.label>исследовательские заметки</AnomalyStudyNotes.label>
 
 </LanguageData>
