--- a/Languages/Russian/DefInjected/RecipeDef/Recipes_AE_Fleshmass.xml
+++ b/Languages/Russian/DefInjected/RecipeDef/Recipes_AE_Fleshmass.xml
@@ -37,13 +37,13 @@
 	<RemoveAEFleshmassAcidGland.description>Удалить кислотную гланду из биомассы.</RemoveAEFleshmassAcidGland.description>
 	<RemoveAEFleshmassAcidGland.jobString>Удаляет кислотную гланду из биомассы</RemoveAEFleshmassAcidGland.jobString>
 
+	<IncubateAEFleshmassEar.label>выращивать ухо из биомассы</IncubateAEFleshmassEar.label>
+	<IncubateAEFleshmassEar.description>Киста из биомассы будет имплантирована в тело субъекта для инкубации уха из биомассы. Это болезненный процесс, который займет один день для ассимиляции кисты внутри тела хозяина.</IncubateAEFleshmassEar.description>
+	<IncubateAEFleshmassEar.jobString>Имплантирует опухоль из биомассы.</IncubateAEFleshmassEar.jobString>
+
 	<IncubateAEFleshmassEye.label>выращивать глаз из биомассы</IncubateAEFleshmassEye.label>
 	<IncubateAEFleshmassEye.description>Опухоль из биомассы будет имплантирована в тело субъекта для инкубации глаза из биомассы. Это болезненный процесс, который займет два дня для ассимиляции опухоли внутри тела хозяина.</IncubateAEFleshmassEye.description>
 	<IncubateAEFleshmassEye.jobString>Имплантирует опухоль из биомассы.</IncubateAEFleshmassEye.jobString>
-
-	<IncubateAEFleshmassEar.label>выращивать ухо из биомассы</IncubateAEFleshmassEar.label>
-	<IncubateAEFleshmassEar.description>Опухоль из биомассы будет имплантирована в тело субъекта для инкубации уха из биомассы. Это болезненный процесс, который займет два дня для ассимиляции опухоли внутри тела хозяина.</IncubateAEFleshmassEar.description>
-	<IncubateAEFleshmassEar.jobString>Имплантирует опухоль из биомассы.</IncubateAEFleshmassEar.jobString>
 
 	<IncubateAEFleshmassKidney.label>выращивать почку из биомассы</IncubateAEFleshmassKidney.label>
 	<IncubateAEFleshmassKidney.description>Опухоль из биомассы будет имплантирована в тело субъекта для инкубации почки из биомассы. Это болезненный процесс, который займет два дня для ассимиляции опухоли внутри тела хозяина.</IncubateAEFleshmassKidney.description>
